--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "allure-pytest (>=2.13.5,<3.0.0)",
     "openai (>=1.61.1,<2.0.0)",
     "pyyaml (>=6.0.2,<7.0.0)",
+    "faiss-cpu (>=1.10.0,<2.0.0)",
+    "pandas (>=2.2.3,<3.0.0)",
+    "openpyxl (>=3.1.5,<4.0.0)",
 ]
 
 
